# pruneme

./: .gitignore  README.md  data.py  evaluate.py  main.py  merge.py  parser.py  pyproject.toml  requirements.txt  run.sh  run_evaluate.sh  slice.yaml
configs/: config.yaml  gradient_based.yaml  random.yaml
scripts/: prepare.sh  run_baseline.sh  run_eval_downstream.sh  run_eval_ppl.sh  run_evaluate.sh  run_evaluate_gap.sh  run_evaluate_normal.sh  run_evaluate_original.sh  run_evaluate_prunned.sh  run_evaluate_similarity.sh  run_magnitude.sh  run_main.sh  run_merge.sh  run_merge_prune_one.sh  run_prune.sh  run_similarity.sh  run_taylor.sh  valprep.sh
src/: config.py  data.py  evaluate.py  info.py  main.py  merge.py  model.py  oe_downstream.py  oe_eval.py  oe_evaluator.py  oe_metric.py  prune.py  resnet.py  similarity.py  taylor.py  utils.py
tests/: test_model.py  test_prune.py
tests/fixtures/: Vanilla-3.2-8L_6.json
